@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=mrViewer-v@VERSION@
+Name=mrViewer v@VERSION@
 Comment=Professional Video and Flipbook player
 Exec="@CMAKE_INSTALL_PREFIX@/mrViewer-v@VERSION@-Linux-64/bin/mrViewer.sh" %F
 Icon=mrViewer.png
