@@ -1,7 +1,1 @@
-#!/bin/bash
-
-ln -s @CPACK_INSTALL_PREFIX@/bin/mrViewer.sh /usr/bin/mrViewer
-cp /usr/share/applications/mrViewer-v@VERSION@.desktop $HOME/Desktop
-
-update-mime-database /usr/share/mime
-
+install.sh.in
