@@ -1,6 +1,1 @@
-#!/bin/bash
-
-rm /usr/bin/mrViewer
-
-update-mime-database /usr/share/mime
-
+uninstall.sh.in
